# fcitx5-configtool

./: .gitignore  CMakeLists.txt
layout/: CMakeLists.txt  deadmapdata.h  keyboardlayoutwidget.cpp  keyboardlayoutwidget.h  main.cpp
